--- a/assets/style.css
+++ b/assets/style.css
@@ -2,12 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-  font-family: Sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body{
   max-height: 100vh;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 
@@ -17,7 +18,9 @@ header{
   height: 100vh;
   /* background-color: #FF6500; */
   background-color: #e6e6e6;
-  color: #FF6500;
+  color: #FF6500; 
+  /* color: #e6e6e6;
+  background-color: #FF6500; */
 }
 
 #headerp{
@@ -27,27 +30,17 @@ header{
 .flex-wrapper{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
   background-color: #e6e6e6; 
-  padding-right: 50px;
+  /* background-color: #FF6500; */
 }
 
-.nav-bar{
-  position: relative;
-  z-index: 1;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-}
-
-ul {
-  list-style: none;
-  background: #e6e6e6;
-}
-
-ul li {
-  display: inline-block;
-  position: relative;
+ul li p {
+  display: block;
+  padding: 20px 25px;
+  color: #FF6500;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
 }
 
 ul li a {
@@ -59,9 +52,6 @@ ul li a {
   font-size: 20px;
 }
 
-ul li ul.dropdown li {
-  display: block;
-}
 
 ul li ul.dropdown {
   width: 100%;
@@ -71,22 +61,46 @@ ul li ul.dropdown {
   display: none;
 }
 
-ul li a:hover {
+/* ul li a:hover {
   background: #d4d4d4;
-}
+} */
 
 ul li:hover ul.dropdown {
   display: block;
 }
 
 .container {
-  margin: 20px;
+  padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1500px;
+  justify-content: space-around;
+  max-width: 1800px;
   align-items: flex-end;
 } 
+
+@media (max-width: 1800px) {
+  .container {
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.container img {
+  object-fit: cover;
+  color: red;
+}
 
 .img-wrapper{
   position: relative;
@@ -156,27 +170,9 @@ display: inline-block;
 .flex-wrapper2{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  
   background-color: #e6e6e6; 
-  padding-right: 50px;
-}
-
-.nav-bar2{
-  position: relative;
-  z-index: 1;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-}
-
-ul {
-  list-style: none;
-  background: #e6e6e6;
-}
-
-ul li {
-  display: inline-block;
-  position: relative;
+  
 }
 
 ul li .shoegaze1 {
@@ -208,14 +204,7 @@ ul li:hover ul.dropdown2 {
   display: block;
 }
 
-.container2 {
-  margin: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1500px;
-  align-items: flex-end;
-} 
+
 
 .img-wrapper2{
   position: relative;
@@ -263,21 +252,7 @@ ul li:hover ul.dropdown2 {
   color: #00c603;
 }
 
-.flex-wrapper3{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row-reverse;
-  background-color: #e6e6e6; 
-  padding-right: 50px;
-}
 
-.nav-bar4{
-  position: relative;
-  z-index: 1;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-}
 
 ul {
   list-style: none;
@@ -317,15 +292,6 @@ ul li a:hover {
 ul li:hover ul.dropdown3 {
   display: block;
 }
-
-.container3 {
-  margin: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1500px;
-  align-items: flex-end;
-} 
 
 .img-wrapper3{
   position: relative;
@@ -376,9 +342,9 @@ ul li:hover ul.dropdown3 {
 .flex-wrapper4{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  
   background-color: #e6e6e6; 
-  padding-right: 50px;
+ 
 }
 
 .nav-bar4{
@@ -486,9 +452,9 @@ ul li:hover ul.dropdown4 {
 .flex-wrapper5{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  
   background-color: #e6e6e6; 
-  padding-right: 50px;
+  
 }
 
 .nav-bar5{
@@ -596,18 +562,10 @@ ul li:hover ul.dropdown5 {
 .flex-wrapper6{
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  
   background-color: #e6e6e6; 
-  padding-right: 50px;
 }
 
-.nav-bar6{
-  position: relative;
-  z-index: 1;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-}
 
 ul {
   list-style: none;
@@ -648,15 +606,6 @@ ul li:hover ul.dropdown6 {
   display: block;
 }
 
-.container6 {
-  margin: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1500px;
-  align-items: flex-end;
-} 
-
 .img-wrapper6{
   position: relative;
   overflow: hidden;
@@ -695,8 +644,8 @@ ul li:hover ul.dropdown6 {
 
 
 .entry-img {
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  width: auto;
 }
 
 .entry-img img{
@@ -705,13 +654,13 @@ ul li:hover ul.dropdown6 {
 }
 
 .entry-img1 {
-  width: 300px;
-  height: 450px;
+  width: 250px;
+  height: auto;
 }
 
 .entry-img1 img{
   width: 300px;
-  height: 450px;
+  height: auto;
 }
 
 .text-box {
